Fix overlapping edit field

--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -56,7 +56,7 @@ $white: #fff;
 
 				.app-navigation-entry-edit.name {
 					display: inline-block;
-					height: auto;
+					position: relative;
 				}
 			}
 
